--- a/index.html
+++ b/index.html
@@ -5,9 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta
       name="description"
-      content="A playful static demo of curated coworking spaces with images and a floating chatbox call to action."
+      content="Minimal static landing page showcasing curated coworking spaces."
     />
-    <title>WeBarelyWork — Coworking Spaces</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -15,159 +14,76 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="index.css" />
+    <title>WeBarelyWork — Curated Coworking Spaces</title>
   </head>
 
   <body>
     <a class="skip-link" href="#main">Skip to content</a>
     <header>
-      <nav>
-        <div class="container nav-container">
-          <a class="logo" href="#" aria-label="WeBarelyWork Home"
-            >WeBarelyWork</a
-          >
-          <ul class="nav-list">
-            <li>
-              <a href="#locations" class="nav-link">
-                <img
-                  src="images/pin.png"
-                  class="icon"
-                  alt="Locations"
-                  decoding="async"
-                />
-              </a>
-            </li>
-          </ul>
-          <button
-            class="nav-toggle"
-            aria-label="Toggle navigation"
-            aria-expanded="false"
-            aria-controls="mobile-menu"
-          >
-            <img
-              src="images/burger.png"
-              class="icon"
-              alt="Open menu"
-              decoding="async"
-            />
-          </button>
-        </div>
+      <nav aria-label="Primary navigation">
+        <ul>
+          <li class="logo"><a href="#" aria-label="Home">WeBarelyWork</a></li>
+          <li>
+            <img src="images/pin.png" class="icon" alt="Location pin" />
+          </li>
+          <li class="align-right">
+            <button class="icon-btn" type="button">
+              <img src="images/burger.png" class="icon" alt="Open menu" />
+            </button>
+          </li>
+        </ul>
       </nav>
     </header>
-    <main id="main" class="container">
-      <header class="hero">
-        <section>
-          <h1>The best coworking spaces for lazy devs.</h1>
-        </section>
-      </header>
+    <main id="main">
+      <section>
+        <h1>The best coworking spaces for lazy devs.</h1>
+      </section>
 
-      <section id="locations" class="items" aria-label="Coworking locations">
-        <article class="item">
-          <figure>
-            <img
-              src="images/hygge.jpg"
-              class="item-img"
-              alt="Hygge Lounge — cozy Scandinavian coworking space"
-              loading="lazy"
-              decoding="async"
-            />
-            <figcaption class="img-banner">Exclusive</figcaption>
-          </figure>
-          <div class="caption">
-            <p>Skiving in Scandinavia? Relax with a latte at Hygge Lounge.</p>
-            <button type="button" class="btn" aria-label="Book Hygge Lounge">
-              Book
-            </button>
-          </div>
-        </article>
+      <section class="item">
+        <img
+          src="images/hygge.jpg"
+          class="item-img"
+          alt="A smart coworking space"
+          loading="lazy"
+          decoding="async"
+        />
+        <div class="img-banner">Exclusive</div>
+        <div class="caption">
+          <p>Skiving in Scandinavia? Relax with a latte at Hygge Lounge.</p>
+          <button type="button" aria-label="Book Hygge Lounge">Book</button>
+        </div>
+      </section>
 
-        <article class="item">
-          <figure>
-            <img
-              src="images/sky-garden.jpg"
-              class="item-img"
-              alt="Sky Garden — a coworking space with indoor plants"
-              loading="lazy"
-              decoding="async"
-            />
-            <figcaption class="img-banner hidden">Popular</figcaption>
-          </figure>
-          <div class="caption">
-            <p>Bored in Barcelona? Take a siesta at the Sky Garden.</p>
-            <button type="button" class="btn" aria-label="Book Sky Garden">
-              Book
-            </button>
-          </div>
-        </article>
+      <section class="item">
+        <img
+          src="images/sky-garden.jpg"
+          class="item-img"
+          alt="A coworking space with plants"
+          loading="lazy"
+          decoding="async"
+        />
+        <div class="caption">
+          <p>Bored in Barcelona? Take a siesta at the Sky Garden.</p>
+          <button type="button" aria-label="Book Sky Garden">Book</button>
+        </div>
+      </section>
 
-        <article class="item">
-          <figure>
-            <img
-              src="images/generator.jpg"
-              class="item-img"
-              alt="Generator Hub — a lively coworking lounge"
-              loading="lazy"
-              decoding="async"
-            />
-          </figure>
-          <div class="caption">
-            <p>Relaxing in Rio? Take some downtime at the Generator Hub.</p>
-            <button type="button" class="btn" aria-label="Book Generator Hub">
-              Book
-            </button>
-          </div>
-        </article>
+      <section class="item">
+        <img
+          src="images/generator.jpg"
+          class="item-img"
+          alt="A comfortable coworking space"
+          loading="lazy"
+          decoding="async"
+        />
+        <div class="caption">
+          <p>Relaxing in Rio? Take some downtime at the Generator Hub.</p>
+          <button type="button" aria-label="Book Generator Hub">Book</button>
+        </div>
       </section>
     </main>
-    <div class="chatbox-bg">
-      <img
-        src="images/message.png"
-        class="chatbox-img"
-        alt="chatbox"
-        loading="lazy"
-        decoding="async"
-      />
-    </div>
-    <footer class="container footer">
-      <small>Made with ☕️ — WeBarelyWork demo</small>
-    </footer>
-
-    <script>
-      // Minimal JS to support the mobile nav toggle and button feedback
-      (function () {
-        const toggle = document.querySelector(".nav-toggle");
-        const mobileMenuId = "mobile-menu";
-        let menu;
-
-        function createMobileMenu() {
-          menu = document.createElement("ul");
-          menu.id = mobileMenuId;
-          menu.className = "mobile-menu";
-          menu.innerHTML =
-            '\n            <li><a href="#main">Home</a></li>\n            <li><a href="#locations">Locations</a></li>\n            <li><a href="#contact">Contact</a></li>'; // contact isn't implemented, placeholder
-          menu.setAttribute("hidden", "");
-          document.querySelector(".nav-container").appendChild(menu);
-        }
-
-        if (toggle) {
-          createMobileMenu();
-          toggle.addEventListener("click", () => {
-            const expanded = toggle.getAttribute("aria-expanded") === "true";
-            toggle.setAttribute("aria-expanded", String(!expanded));
-            if (expanded) {
-              menu.setAttribute("hidden", "");
-            } else {
-              menu.removeAttribute("hidden");
-            }
-          });
-        }
-
-        document.querySelectorAll(".btn").forEach((b) => {
-          b.addEventListener("click", (e) => {
-            e.preventDefault();
-            alert("Booking functionality is not implemented in this demo.");
-          });
-        });
-      })();
-    </script>
+    <button class="chatbox-bg" type="button">
+      <img src="images/message.png" class="chatbox-img" alt="Open chat" />
+    </button>
   </body>
 </html>
